# DELETE-THIS-mail-smtp

./: Cargo.toml  README.md
smtp/: Cargo.toml  README.md
smtp/src/: error.rs  lib.rs  request.rs  resolve_all.rs  send_mail.rs
src/: common.rs  encode.rs  error.rs  handle.rs  lib.rs  mpsc_ext.rs  request.rs  send_mail.rs  service.rs  smtp_wrapper.rs  stop_handle.rs  test.rs
