[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "mail-smtp"
version = "0.1.0"
categories = []
description = "combines mail-codec with new-tokio-smtp"
documentation = "https://docs.rs/mail-smtp"
keywords = ["mail", "smtp", "send" ]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/1aim/mail-smtp"

[dependencies]
mail = { git="https://github.com/1aim/mail" }
new-tokio-smtp = { git="https://github.com/1aim/new-tokio-smtp" }
