[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "mail-smtp"
version = "0.1.0"
categories = []
description = "[internal/mail-api] combines mail-types with new-tokio-smtp"
documentation = "https://docs.rs/mail-smtp"
keywords = ["mail-api"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/1aim/mail-smtp"

[dependencies]
futures = "0.1"
failure = "0.1.1"
mail-types = { git="https://github.com/1aim/mail-types" }
mail-common = { git="https://github.com/1aim/mail-common" }
mail-headers = { git="https://github.com/1aim/mail-headers" }
new-tokio-smtp = { git="https://github.com/1aim/new-tokio-smtp" }


[features]
test-with-traceing = ["mail-common/traceing"]
extended-api = []