[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "mail-smtp"
version = "0.2.0-wip"
categories = []
description = "[internal/mail-api] combines mail-core with new-tokio-smtp"
documentation = "https://docs.rs/mail-smtp"
keywords = ["mail-api"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/1aim/mail-smtp"

[dependencies]
futures = "0.1"
failure = "0.1.1"
mail-core = { path="../core" }
mail-headers = { path="../headers"}
mail-internals = { path="../internals" }
new-tokio-smtp = "0.8.1"

[features]
test-with-traceing = ["mail-internals/traceing"]
extended-api = []